Update web-market.yaml and index.html. Add more tests.
